@@ -2,15 +2,10 @@ package servlet;
 
 import bean.UserBean;
 import dao.UserDao;
-import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
-import java.io.IOException;
-import java.io.PrintWriter;
-import java.sql.SQLException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -53,23 +48,14 @@ public class UserServlet extends BaseServlet {
         userBean2.setEmail("wangwu@qq.com");
 
         try {
-            // 单条新增失败，直接抛异常，删改同理
-//            int result = userDao.saveUser(userBean);
-            // 多条新增失败，不抛异常，会返回成功和失败的数组，删改同理
-//            int[] result = userDao.saveUserList(Arrays.asList(userBean, userBean1, userBean2));
+            int result = userDao.save(List.of(userBean1, userBean2));
+//            int result = userDao.remove(List.of(5));
+//            int result = userDao.update(List.of(9), Map.of("age", "19", "height", "1.99"));
+            System.out.println(result);
 
-//            int result = userDao.removeUserById(16);
-//            int[] result = userDao.removeUserListById(Arrays.asList(16, 20, 42));
-
-//            int result = userDao.updateUserById(44, Map.of("age", "33", "height", "2.33"));
-//            int[] result = userDao.updateUserListById(Arrays.asList(16, 45, 46), Map.of("age", "99", "height", "1.79"));
-
-//            System.out.println(result);
-
-//            UserBean userBean4 = userDao.getUserById(44);
-//            System.out.println(userBean4);
-
-            List<UserBean> userBeanList = userDao.listUserByPage(2, 1);
+            UserBean readUserBean = userDao.get(10);
+            System.out.println(readUserBean);
+            List<UserBean> userBeanList = userDao.list(2, 1);
             System.out.println(userBeanList);
         } catch (Exception e) {
             e.printStackTrace();
